cmake_minimum_required(VERSION 3.20)
project(codeforces)

set(CMAKE_CXX_STANDARD 14)

add_executable(_4A src/_4A.cpp)
add_executable(_71A src/_71A.cpp)
add_executable(Codeforces_760_1 src/Codeforces_Round_1.cpp)
add_executable(Codeforces_760_2 src/Codeforces_Round_2.cpp)
add_executable(_231A src/_231A.cpp)
add_executable(_158A src/_158A.cpp)
add_executable(_50A src/_50A.cpp)
add_executable(1619_0 src/1619_0.cpp)
add_executable(1619_1 src/1619_1.cpp)
add_executable(1621_2 src/1621_2.cpp)
add_executable(_282A src/282A.cpp)
add_executable(_263A src/_263A.cpp)
add_executable(_112A src/_122A.cpp)
add_executable(_339A src/_339A.cpp)
add_executable(_281A src/_281A.cpp)
add_executable(_266A src/_266A.cpp)
