cmake_minimum_required(VERSION 3.20)
project(codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(_4A src/_4A.cpp)
add_executable(_71A src/_71A.cpp)
add_executable(Codeforces_760_1 src/Codeforces_Round_1.cpp)
add_executable(Codeforces_760_2 src/Codeforces_Round_2.cpp)
add_executable(_231A src/_231A.cpp)
add_executable(_158A src/_158A.cpp)
add_executable(_50A src/_50A.cpp)
add_executable(1619_0 src/1619_0.cpp)
add_executable(1619_1 src/1619_1.cpp)
add_executable(1621_2 src/1621_2.cpp)
add_executable(_282A src/282A.cpp)
add_executable(_263A src/_263A.cpp)
add_executable(_112A src/_122A.cpp)
add_executable(_339A src/_339A.cpp)
add_executable(_281A src/_281A.cpp)
add_executable(_266A src/_266A.cpp)
add_executable(_236A src/_236.cpp)
add_executable(_791A src/_791A.cpp)
add_executable(_546A src/546A.cpp)
add_executable(_617A src/_617.cpp)
add_executable(_59A src/59.cpp)
add_executable(_977A src/_977A.cpp)
add_executable(_116A src/_116A.cpp)
add_executable(_266B src/266B.cpp)
add_executable(_110A src/_110A.cpp)
add_executable(_41A src/_41A.cpp)
add_executable(_734A src/_734A.cpp)
add_executable(_271A src/_271A.cpp)
add_executable(_677A src/_677A.cpp)
add_executable(_467A src/_467A.cpp)
add_executable(1624A src/1624A.cpp)
add_executable(1624B src/1624B.cpp)
add_executable(_136A src/_136A.cpp)
add_executable(_1030A src/_1030.cpp)
add_executable(_200B src/_200B.cpp)
add_executable(_344A src/_344.cpp)
add_executable(_486A src/_486A.cpp)
add_executable(_61A src/_61A.cpp)
add_executable(_705A src/_705A.cpp)
add_executable(_228A src/_228A.cpp)
add_executable(_496A src/_496A.cpp)
add_executable(_144A src/_144A.cpp)
add_executable(_1328A src/_1328A.cpp)
add_executable(_443A src/_443A.cpp)
add_executable(_286A src/_286A.cpp)
add_executable(_148A src/_148A.cpp)
