cmake_minimum_required(VERSION 3.20)
project(codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(_4A src/_4A.cpp)
add_executable(_71A src/_71A.cpp)
add_executable(Codeforces_760_1 src/Codeforces_Round_1.cpp)
add_executable(Codeforces_760_2 src/Codeforces_Round_2.cpp)
add_executable(_231A src/_231A.cpp)
add_executable(_158A src/_158A.cpp)
add_executable(_50A src/_50A.cpp)
add_executable(1619_0 src/1619_0.cpp)
add_executable(1619_1 src/1619_1.cpp)
add_executable(1621_2 src/1621_2.cpp)
add_executable(_282A src/282A.cpp)
add_executable(_263A src/_263A.cpp)
add_executable(_112A src/_122A.cpp)
add_executable(_339A src/_339A.cpp)
add_executable(_281A src/_281A.cpp)
add_executable(_266A src/_266A.cpp)
add_executable(_236A src/_236.cpp)
add_executable(_791A src/_791A.cpp)
add_executable(_546A src/546A.cpp)
add_executable(_617A src/_617A.cpp)
add_executable(_59A src/59.cpp)
add_executable(_977A src/_977A.cpp)
add_executable(_116A src/_116A.cpp)
add_executable(_266B src/266B.cpp)
add_executable(_110A src/_110A.cpp)
add_executable(_41A src/_41A.cpp)
add_executable(_734A src/_734A.cpp)
add_executable(_271A src/_271A.cpp)
add_executable(_677A src/_677A.cpp)
add_executable(_467A src/_467A.cpp)
add_executable(1624A src/1624A.cpp)
add_executable(1624B src/1624B.cpp)
add_executable(_136A src/_136A.cpp)
add_executable(_1030A src/_1030.cpp)
add_executable(_200B src/_200B.cpp)
add_executable(_344A src/_344.cpp)
add_executable(_486A src/_486A.cpp)
add_executable(_61A src/_61A.cpp)
add_executable(_705A src/_705A.cpp)
add_executable(_228A src/_228A.cpp)
add_executable(_496A src/_496A.cpp)
add_executable(_144A src/_144A.cpp)
add_executable(_1328A src/_1328A.cpp)
add_executable(_443A src/_443A.cpp)
add_executable(_286A src/_286A.cpp)
add_executable(_148A src/_148A.cpp)
add_executable(_520A src/_520A.cpp)
add_executable(_996A src/_996A.cpp)
add_executable(_141A src/_141A.cpp)
add_executable(_785A src/_785A.cpp)
add_executable(_510A src/_510A.cpp)
add_executable(_750A src/_750A.cpp)
add_executable(_155A src/_155A.cpp)
add_executable(_581A src/_581A.cpp)
add_executable(_427A src/_427A.cpp)
add_executable(_1399A src/_1399A.cpp)
add_executable(_1367A src/_1367A.cpp)
add_executable(_723A src/_723A.cpp)
add_executable(_432A src/_432A.cpp)
add_executable(_758A src/_758A.cpp)
add_executable(_490A src/_490A.cpp)
add_executable(1633_0 src/1633_0.cpp)
add_executable(1633_1 src/1633_1.cpp)
add_executable(_1353B src/_1353B.cpp)
add_executable(_1512A src/_1512A.cpp)
add_executable(_1374A src/_1374A.cpp)
add_executable(_1367B src/_1367B.cpp)
add_executable(_703A src/_703A.cpp)
add_executable(_1638A src/1638A.cpp)
add_executable(1638B src/1638B.cpp)
add_executable(_1520A src/_1520A.cpp)
add_executable(_1360A src/_1360A.cpp)
add_executable(_151A src/_151A.cpp)
add_executable(1644A src/1644A.cpp)
add_executable(1644B src/1644c.cpp)
add_executable(_1360B src/_1360B.cpp)
add_executable(_1560A src/_1560A.cpp)
add_executable(_1433A src/_1433A.cpp)
add_executable(_381A src/_381A.cpp)
add_executable(_749A src/_749A.cpp)
add_executable(_431A src/_431A.cpp)
add_executable(_32B src/_32B.cpp)